tests/paczka1/fuzzy1/99102079.err
Error in line 3: UfI S152 77,7
Error in line 2: S788 S152 83,4
Error in line 10: S788 A621 50,3
Error in line 15: 23W S788 60,5
Error in line 22: 23W A273 83,0
Error in line 30: tp0 S152 852,5
Error in line 33: 3p42 A621 44,4
